Disable release tracking

--- a/Docs/AA0001.md
+++ b/Docs/AA0001.md
@@ -1,12 +1,12 @@
 ﻿# MustImplement
 
-| Category | Value
-| --- | ---
-| **Rule Id** | AA0001
-| **Summary** | Type must implement a specified interface.
-| **Supported Languages** | CSharp
-| **Tags** | Design
-| **Severity** | Warning
+| Category                | Value                                      |
+|-------------------------|--------------------------------------------|
+| **Rule Id**             | AA0001                                     |
+| **Summary**             | Type must implement a specified interface. |
+| **Supported Languages** | CSharp                                     |
+| **Tags**                | Design                                     |
+| **Severity**            | Warning                                    |
 
 ## Configuration
 
