--- a/Docs/AA0002.md
+++ b/Docs/AA0002.md
@@ -1,12 +1,12 @@
 ﻿# MustInherit
 
-| Category | Value
-| --- | ---
-| **Rule Id** | AA0002
-| **Summary** | Type must inherit specified type.
-| **Supported Languages** | CSharp
-| **Tags** | Design
-| **Severity** | Warning
+| Category                | Value                             |
+|-------------------------|-----------------------------------|
+| **Rule Id**             | AA0002                            |
+| **Summary**             | Type must inherit specified type. |
+| **Supported Languages** | CSharp                            |
+| **Tags**                | Design                            |
+| **Severity**            | Warning                           |
 
 ## Configuration
 
