--- a/Docs/AA0003.md
+++ b/Docs/AA0003.md
@@ -1,12 +1,12 @@
 ﻿# MustNotImplement
 
-| Category | Value
-| --- | ---
-| **Rule Id** | AA0003
-| **Summary** | Type must not implement a specified interface.
-| **Supported Languages** | CSharp
-| **Tags** | Design
-| **Severity** | Warning
+| Category                | Value                                          |
+|-------------------------|------------------------------------------------|
+| **Rule Id**             | AA0003                                         |
+| **Summary**             | Type must not implement a specified interface. |
+| **Supported Languages** | CSharp                                         |
+| **Tags**                | Design                                         |
+| **Severity**            | Warning                                        |
 
 ## Configuration
 
