--- a/Docs/AA0004.md
+++ b/Docs/AA0004.md
@@ -1,12 +1,12 @@
 ﻿# MustNotInherit
 
-| Category | Value
-| --- | ---
-**Rule Id** | AA0004
-**Summary** | Type must not inherit from a specified type.
-**Supported Languages** | CSharp
-**Tags** | Design
-**Severity** | Warning
+| Category                | Value                                        |
+|-------------------------|----------------------------------------------|
+| **Rule Id**             | AA0004                                       |
+| **Summary**             | Type must not inherit from a specified type. |
+| **Supported Languages** | CSharp                                       |
+| **Tags**                | Design                                       |
+| **Severity**            | Warning                                      |
 
 ## Configuration
 
