--- a/Docs/AA0001.md
+++ b/Docs/AA0001.md
@@ -15,8 +15,8 @@ Schema:
 ```json
 {
     "mustImplement": {
-        "interface":  <TypeMatcher>,
-        "forTypes": <TypeMatcher>
+        "interface": "<matcher>",
+        "forTypes": "<matcher>"
     }
 }
 ```
@@ -27,7 +27,7 @@ Example:
 ```json
 {
   "mustImplement": {
-    "interface":  { "fullName": "System.IDisposable" }    ,
+    "interface": { "fullName": "System.IDisposable" },
     "forTypes": { "name": "*Disposable" }
   }
 }
