--- a/Docs/AA0002.md
+++ b/Docs/AA0002.md
@@ -15,8 +15,8 @@ Schema:
 ```json
 {
     "mustInherit": {
-        "baseType":  <TypeMatcher>,
-        "forTypes": <TypeMatcher>
+        "baseType": "<matcher>",
+        "forTypes": "<matcher>"
     }
 }
 ```
@@ -27,7 +27,7 @@ Example:
 ```json
 {
   "mustInherit": {
-    "baseType":  { "fullName": "System.Exception" }    ,
+    "baseType": { "fullName": "System.Exception" },
     "forTypes": { "name": "*Exception" }
   }
 }
