--- a/Docs/AA0003.md
+++ b/Docs/AA0003.md
@@ -15,8 +15,8 @@ Schema:
 ```json
 {
     "mustNotImplement": {
-        "interface":  <TypeMatcher>,
-        "forTypes": <TypeMatcher>
+        "interface": "<matcher>",
+        "forTypes": "<matcher>"
     }
 }
 ```
@@ -27,7 +27,7 @@ Example:
 ```json
 {
   "mustNotImplement": {
-    "interface":  { "fullName": "System.IDisposable" }    ,
+    "interface": { "fullName": "System.IDisposable" }    ,
     "forTypes": { "name": "*UnDisposable" }
   }
 }
