--- a/Docs/AA0004.md
+++ b/Docs/AA0004.md
@@ -15,8 +15,8 @@ Schema:
 ```json
 {
     "mustNotInherit": {
-        "baseType":  <TypeMatcher>,
-        "forTypes": <TypeMatcher>
+        "baseType": "<matcher>",
+        "forTypes": "<matcher>"
     }
 }
 ```
@@ -27,7 +27,7 @@ Example:
 ```json
 {
   "mustNotInherit": {
-    "baseType":  { "fullName": "System.Exception" } ,
+    "baseType": { "fullName": "System.Exception" } ,
     "forTypes": { "not": {"name": "*Exception" } }
   }
 }
