--- a/Docs/AA0004.md
+++ b/Docs/AA0004.md
@@ -14,7 +14,8 @@ Schema:
     
 ```json
 {
-    "mustNotInherit": {
+    "mustInherit": {
+        "forbidden": true,
         "baseType": "<matcher>",
         "forTypes": "<matcher>"
     }
@@ -26,7 +27,8 @@ Schema:
 Example:
 ```json
 {
-  "mustNotInherit": {
+  "mustInherit": {
+    "forbidden": true,
     "baseType": { "fullName": "System.Exception" } ,
     "forTypes": { "not": {"name": "*Exception" } }
   }
